update uploads and categories table schemas
