# docs/swagger.json
@@ -365,7 +365,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/go-shop-backend_pkg_response.Response-go-shop-backend_pkg_response_PaginatedResponse-array_go-shop-backend_internal_dto_ProductCategoryResponse"
+                            "$ref": "#/definitions/go-shop-backend_pkg_response.Response-go-shop-backend_pkg_response_PaginatedResponse-array_go-shop-backend_internal_dto_CategoryResponse"
                         }
                     },
                     "400": {
@@ -431,7 +431,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/go-shop-backend_pkg_response.Response-go-shop-backend_pkg_response_PaginatedResponse-array_go-shop-backend_internal_dto_ProductCategoryResponse"
+                            "$ref": "#/definitions/go-shop-backend_pkg_response.Response-go-shop-backend_pkg_response_PaginatedResponse-array_go-shop-backend_internal_dto_CategoryResponse"
                         }
                     },
                     "400": {
@@ -1331,6 +1331,32 @@
                 }
             }
         },
+        "go-shop-backend_internal_dto.CategoryResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parent_id": {
+                    "type": "string"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "sort_order": {
+                    "type": "integer"
+                }
+            }
+        },
         "go-shop-backend_internal_dto.Confirm2FARequest": {
             "type": "object",
             "required": [
@@ -1369,11 +1395,24 @@
                 },
                 "order_id": {
                     "type": "string"
+                }
+            }
+        },
+        "go-shop-backend_internal_dto.OrderItemProductResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
                 },
-                "unavailable_items": {
+                "images": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/go-shop-backend_internal_dto.UnavailableItem"
+                        "type": "object",
+                        "properties": {
+                            "url": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
@@ -1383,6 +1422,9 @@
             "properties": {
                 "id": {
                     "type": "string"
+                },
+                "product": {
+                    "$ref": "#/definitions/go-shop-backend_internal_dto.OrderItemProductResponse"
                 },
                 "product_id": {
                     "type": "string"
@@ -1415,6 +1457,9 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "is_guest_order": {
+                    "type": "boolean"
                 },
                 "items": {
                     "type": "array",
@@ -1449,9 +1494,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "parent_id": {
                     "type": "string"
                 },
                 "slug": {
@@ -1574,26 +1616,6 @@
                 }
             }
         },
-        "go-shop-backend_internal_dto.UnavailableItem": {
-            "type": "object",
-            "properties": {
-                "action": {
-                    "type": "string"
-                },
-                "available_qty": {
-                    "type": "integer"
-                },
-                "product_id": {
-                    "type": "string"
-                },
-                "reason": {
-                    "type": "string"
-                },
-                "requested_qty": {
-                    "type": "integer"
-                }
-            }
-        },
         "go-shop-backend_internal_dto.UploadResponse": {
             "type": "object",
             "properties": {
@@ -1603,13 +1625,16 @@
                 "created_at": {
                     "type": "string"
                 },
-                "is_main": {
-                    "type": "boolean"
+                "media_type": {
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
                 },
                 "url": {
+                    "type": "string"
+                },
+                "variant": {
                     "type": "string"
                 }
             }
@@ -1654,6 +1679,9 @@
                 },
                 "email": {
                     "type": "string"
+                },
+                "email_confirmed": {
+                    "type": "boolean"
                 },
                 "id": {
                     "type": "string"
@@ -1704,13 +1732,13 @@
                 }
             }
         },
-        "go-shop-backend_pkg_response.PaginatedResponse-array_go-shop-backend_internal_dto_OrderResponse": {
+        "go-shop-backend_pkg_response.PaginatedResponse-array_go-shop-backend_internal_dto_CategoryResponse": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/go-shop-backend_internal_dto.OrderResponse"
+                        "$ref": "#/definitions/go-shop-backend_internal_dto.CategoryResponse"
                     }
                 },
                 "total": {
@@ -1718,13 +1746,13 @@
                 }
             }
         },
-        "go-shop-backend_pkg_response.PaginatedResponse-array_go-shop-backend_internal_dto_ProductCategoryResponse": {
+        "go-shop-backend_pkg_response.PaginatedResponse-array_go-shop-backend_internal_dto_OrderResponse": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/go-shop-backend_internal_dto.ProductCategoryResponse"
+                        "$ref": "#/definitions/go-shop-backend_internal_dto.OrderResponse"
                     }
                 },
                 "total": {
@@ -1816,7 +1844,7 @@
                 }
             }
         },
-        "go-shop-backend_pkg_response.Response-go-shop-backend_pkg_response_PaginatedResponse-array_go-shop-backend_internal_dto_ProductCategoryResponse": {
+        "go-shop-backend_pkg_response.Response-go-shop-backend_pkg_response_PaginatedResponse-array_go-shop-backend_internal_dto_CategoryResponse": {
             "type": "object",
             "properties": {
                 "details": {},
@@ -1824,7 +1852,7 @@
                     "type": "string"
                 },
                 "result": {
-                    "$ref": "#/definitions/go-shop-backend_pkg_response.PaginatedResponse-array_go-shop-backend_internal_dto_ProductCategoryResponse"
+                    "$ref": "#/definitions/go-shop-backend_pkg_response.PaginatedResponse-array_go-shop-backend_internal_dto_CategoryResponse"
                 }
             }
         },
@@ -1872,6 +1900,9 @@
                 },
                 "email": {
                     "type": "string"
+                },
+                "email_confirmed": {
+                    "type": "boolean"
                 },
                 "id": {
                     "type": "string"
