# internal/dto/category.go
@@ -2,11 +2,14 @@ package dto
 
 import "github.com/google/uuid"
 
-type ProductCategoryResponse struct {
-	ID       uuid.UUID  `json:"id"`
-	Name     string     `json:"name"`
-	Slug     string     `json:"slug"`
-	ParentID *uuid.UUID `json:"parent_id"`
+type CategoryResponse struct {
+	ID          uuid.UUID  `json:"id"`
+	ParentID    *uuid.UUID `json:"parent_id"`
+	Name        string     `json:"name"`
+	Slug        string     `json:"slug"`
+	Description string     `json:"description"`
+	IsActive    bool       `json:"is_active"`
+	SortOrder   int        `json:"sort_order"`
 }
 
 type ListCategoryRequest struct {
