# internal/dto/upload.go
@@ -19,7 +19,8 @@ type SignURLResponse struct {
 type UploadResponse struct {
 	URL         string    `json:"url"`
 	ContentType *string   `json:"content_type"`
-	IsMain      bool      `json:"is_main"`
+	MediaType   string    `json:"media_type"`
+	Variant     string    `json:"variant"`
 	CreatedAt   time.Time `json:"created_at"`
 	UpdatedAt   time.Time `json:"updated_at"`
 }
