# internal/models/upload.go
@@ -7,6 +7,18 @@ import (
 	"gorm.io/gorm"
 )
 
+type UploadMediaType string
+
+const (
+	UploadMediaTypeDefault UploadMediaType = "default"
+)
+
+type UploadVariant string
+
+const (
+	UploadVariantOriginal UploadVariant = "original"
+)
+
 type Upload struct {
 	ID uuid.UUID `gorm:"type:uuid;default:gen_random_uuid();primaryKey"`
 
@@ -15,19 +27,20 @@ type Upload struct {
 
 	EntityType string `gorm:"type:varchar(255);not null;
 		index:idx_uploads_entity_created_at,priority:1,where:deleted_at IS NULL;
-		uniqueIndex:idx_uploads_is_main_unique,priority:1,where:is_main = true AND deleted_at IS NULL"`
+		index:idx_uploads_entity_media_type,priority:1,where:deleted_at IS NULL"`
 	EntityID uuid.UUID `gorm:"type:uuid;not null;
 		index:idx_uploads_entity_created_at,priority:2,where:deleted_at IS NULL;
-		uniqueIndex:idx_uploads_is_main_unique,priority:2,where:is_main = true AND deleted_at IS NULL"`
+		index:idx_uploads_entity_media_type,priority:2,where:deleted_at IS NULL"`
 
 	FileSize    int64   `gorm:"not null"`
 	ContentType *string `gorm:"type:varchar(255)"`
 
-	IsMain bool `gorm:"not null;default:false"`
+	MediaType UploadMediaType `gorm:"type:varchar(100);not null;default:'default';index:idx_uploads_entity_media_type,priority:3,where:deleted_at IS NULL"`
+	Variant   UploadVariant   `gorm:"type:varchar(50);not null;default:'original'"`
 
-	CreatedAt time.Time `gorm:"index:idx_uploads_entity_created_at,priority:3,sort:desc,where:deleted_at IS NULL"`
-	UpdatedAt time.Time
-	DeletedAt gorm.DeletedAt `gorm:"index"`
+	CreatedAt time.Time      `gorm:"type:timestamptz;default:now();not null;index:idx_uploads_entity_created_at,priority:3,sort:desc,where:deleted_at IS NULL"`
+	UpdatedAt time.Time      `gorm:"type:timestamptz;default:now();not null"`
+	DeletedAt gorm.DeletedAt `gorm:"type:timestamptz;index"`
 
 	URL string `gorm:"-"`
 }
