# internal/upload/types.go
@@ -54,7 +54,8 @@ type SaveUploadRequest struct {
 type ContentResponse struct {
 	URL         string    `json:"url"`
 	ContentType *string   `json:"content_type"`
-	IsMain      bool      `json:"is_main"`
+	MediaType   string    `json:"media_type"`
+	Variant     string    `json:"variant"`
 	CreatedAt   time.Time `json:"created_at"`
 	UpdatedAt   time.Time `json:"updated_at"`
 }
